--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,77 @@
       <div class="content-holder">
         <h1 class="main-heading">Layout</h1>
         <div class="demo-content">
-          <h2 class="sub-heading">Layout</h2>
+          <h2 class="sub-heading">Reset Element</h2>
+          <div class="block">
+            <p>This is a block with padding</p>
+          </div>
+          <hr>
+          <div class="block reset-block">
+            <p>This is a block with padding</p>
+          </div>
+        </div>
+        <div class="demo-content">
+          <h2 class="sub-heading">Clear Fix</h2>
+          <p>I've included a modern clearfix in case you still need to use floats. But you should probably use flexbox instead. You don't need to clear floats with flexbox.</p>
+          <p>The boxes below have a `float: left` rule applied. Notice how the wrapper doesn't actually wrap the blocks. Adding a clearfix will solve this problem</p>
+          <div class="box-holder">
+            <div class="box left">Box 1</div>
+            <div class="box left">Box 2</div>
+            <div class="box left">Box 3</div>
+          </div>
+          <div class="clearfix"></div>
+          <h3>With a clearfix</h3>
+          <div class="box-holder clearfix">
+            <div class="box left">Box 1</div>
+            <div class="box left">Box 2</div>
+            <div class="box left">Box 3</div>
+          </div>
+        </div>
+        <div class="demo-content">
+          <h2 class="sub-heading">Center Content</h2>
+          <div class="center-block">
+            <div class="box left">Box 1</div>
+            <div class="box left">Box 2</div>
+            <div class="box left">Box 3</div>
+          </div>
+        </div>
+        <div class="demo-content">
+          <h2 class="sub-heading">Center Content with Flexbox</h2>
+          <div class="box-holder center-flex height-700">
+            <div class="box">Box 1</div>
+          </div>
+        </div>
+        <div class="demo-content">
+          <h2 class="sub-heading">Screen Reader Content</h2>
+          <p>Sometimes you want to provide some extra context for screen readers only.</p>
+          <p>Check view source to see the screen reader content</p>
+          <p class="screen-reader-only">This is hidden from the visual document</p>
+        </div>
+        <div class="demo-content">
+          <h2 class="sub-heading">Position Content</h2>
+          <div class="box-holder height-700">
+            <div class="box content-top-center">Top Center</div>
+            <div class="box content-bottom-center">Bottom Center</div>
+            <div class="box content-center-left">Center Left</div>
+            <div class="box content-center-right">Center Right</div>
+            <div class="box content-center">Center Center</div>
+          </div>
+        </div>
+        <div class="demo-content">
+          <h2 class="sub-heading">Overflow Content</h2>
+          <div class="box-holder height-300 overflow-scroll">
+            <div class="content">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repudiandae corrupti, id explicabo eos provident dolorem, consectetur rem natus illum debitis labore facilis enim voluptatum sed? Doloribus obcaecati tempora corrupti a? Error quo, molestiae amet fugit sapiente corporis harum delectus accusamus dolorem, esse necessitatibus, quis sequi omnis eos quae labore illum beatae? Rem totam aliquam unde, dolores ipsa illum quos?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repudiandae corrupti, id explicabo eos provident dolorem, consectetur rem natus illum debitis labore facilis enim voluptatum sed?</p>
+            </div>
+          </div>
+          <h3>Disable Scrollbars</h3>
+          <div class="box-holder height-300 overflow-scroll no-scroll">
+            <div class="content">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repudiandae corrupti, id explicabo eos provident dolorem, consectetur rem natus illum debitis labore facilis enim voluptatum sed? Doloribus obcaecati tempora corrupti a? Error quo, molestiae amet fugit sapiente corporis harum delectus accusamus dolorem, esse necessitatibus, quis sequi omnis eos quae labore illum beatae? Rem totam aliquam unde, dolores ipsa illum quos?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repudiandae corrupti, id explicabo eos provident dolorem, consectetur rem natus illum debitis labore facilis enim voluptatum sed?</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
