--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html class="no-js">
+<html lang="en-US" class="no-js">
   <!--<![endif]-->
 
   <head>
@@ -22,7 +22,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/demo.css" />
+    <link rel="stylesheet" href="./demo.scss" />
   </head>
 
   <body>
